--- a/bootstrapBasic/test-row/index-2.html
+++ b/bootstrapBasic/test-row/index-2.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="row.css">
+    <link rel="stylesheet" href="row.css">
 </head>
-<body>
-<div class="container-fluid" style="height:100%">
-    <div class="row"><div class="col" style="bacground:orange; height:50% width:50%">1</div></div>
-</div>
 
+<body>
+    <!--<div class="container-fluid" style="height: 100%">
+    <div class="row"><div class="col" style="bacground:orange; height:50% width:50%">1</div></div>
+</div> -->
+    <!--<div class="container-fluid" style="height:100%"> <div class="row border" style="height:100%"><div class="col bg-danger border" style="height:100%">3</div><div class="col border">1</div></div></div> -->
+
+
+    
+
+
+    <div class="container-fluid border border-dark" style="height:100%">
+
+        <div class="row border border-dark" style="height:100%; background:orange">
+            <div class="col"></div>
+            <div class="col">
+                <div class="row border border-dark" style="height:50%; background:yellow"></div>
+                <div class="row border border-dark" style="height:50%; background:red">
+                    <div class="col"> 
+                    <div class="row border border-dark"style="height:50%; background:#089cd8"></div>
+                    <div class="row border border-dark" style="height:50%; background:#b8754d"></div>
+                    </div>
+                     <div class="col border border-dark"></div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 
 
 </body>
+
 </html>
