--- a/bootstrapBasic/test-row/index-2.html
+++ b/bootstrapBasic/test-row/index-2.html
@@ -15,7 +15,7 @@
     <!--<div class="container-fluid" style="height:100%"> <div class="row border" style="height:100%"><div class="col bg-danger border" style="height:100%">3</div><div class="col border">1</div></div></div> -->
 
 
-    
+    <!-- COLUMNS -->
 
 
     <div class="container-fluid border border-dark" style="height:100%">
