--- a/bootstrapBasic/exercise_colomns/index1-.html
+++ b/bootstrapBasic/exercise_colomns/index1-.html
@@ -25,7 +25,7 @@
            </ul>
            </div>
            
-              <div class="col-lg-9">
+              <div class="col-md-9">
               <div class="row">
                <h3 class="text-center"> Paul Cézanne</h3>
                <p>
