--- a/bootstrapBasic/exercise_colomns/index1-.html
+++ b/bootstrapBasic/exercise_colomns/index1-.html
@@ -6,11 +6,12 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="columns.css">
+    <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css">
 </head>
 <body>
    <div class="container">
        <div class="row">
-           <div class="col-md-3"><img src="img/440px-Paul_C%C3%A9zanne_127.jpg" class="img-fluid" width="150px" height="150px">
+           <div class="col-md-3"><img src="img/440px-Paul_1_127.jpg" class="img-fluid" width="150px" height="150px">
            <ul >
               <h4>Content</h4>
                <li>Life and work</li>
@@ -36,12 +37,12 @@ Cézanne is said to have formed the bridge between late 19th-century Impressioni
                </div>
                <div class="row">
                    <div class="col-md-3">
-                       <img src="img/440px-Paul_C%C3%A9zanne_130.jpg" class="img-fluid">
+                       <img src="img/440px-Paul_2_130.jpg" class="img-fluid animated zoomIn">
                        <p>Paul Cézanne (US: /seɪˈzæn/ or UK: /sɪˈzæn/; French: [pɔl sezan]; 19 January 1839 – 22 October 1906) was a French artist and Post-Impressionist painter whose work laid the foundations of the transition from the 19th-century conception of artistic endeavor to a new and radically different world of </p>
                    </div>
-                   <div class="col-md-3"><img src="img/440px-Paul_C%C3%A9zanne_155.jpg" class="img-fluid">
+                   <div class="col-md-3"><img src="img/440px-Paul_3_155.jpg" class="img-fluid animated zoomIn">
                        <p>Paul Cézanne (US: /seɪˈzæn/ or UK: /sɪˈzæn/; French: [pɔl sezan]; 19 January 1839 – 22 October 1906) was a French artist and Post-Impressionist painter whose work laid .</p></div>
-                   <div class="col-md-3"><img src="img/Paul_C%C3%A9zanne_-_Madame_C%C3%A9zanne_em_Vermelho.jpg" class="img-fluid">
+                   <div class="col-md-3"><img src="img/Paul_Cezanne_-_Madame_4_em_Vermelho.jpg" class="img-fluid animated zoomIn">
                        <p>To a new and radically different world of art in the 20th century. Cézanne's often repetitive, exploratory brushstrokes are highly characteristic and clearly recognizable.</p></div>
                </div>
                
