--- a/bootstrapBasic/exercise_colomns/index1-.html
+++ b/bootstrapBasic/exercise_colomns/index1-.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<<<<<<< Updated upstream
+ upstream
    <div class="container">
        <div class="row">
            <div class="col-md-3"><img src="img/440px-Paul_1_127.jpg" class="img-fluid" width="150px" height="150px">
