--- a/happy_cactus/index-cactus.html
+++ b/happy_cactus/index-cactus.html
@@ -29,13 +29,13 @@
     <!-- HEADER -->
     <header>
         <div class="container-fluid padding header-box">
-            <div class="row ">
-                <div class="col-md-4 arrow">
+            <div class="row" id="headerMain">
+                <div class="col-md-4 arrow text-center">
                     <a href="#"><img src="icons/headerIcon/Group%202.svg" alt=""></a>
                 </div>
                 <div class="col-md-8">
-                    <div class="hBlock">
-                        <div class="row ">
+                    <div class="hBlock ml-4">
+                        <div class="row">
                             <h1 class="header-box-yellow">Creative</h1>
                             <h1 class="header-box-blue">Tech</h1> </div>
                         <div class="row">
